# stage-timer-pro

./: .gitignore  CLEANUP_LOG.md  COMMERCIAL_USAGE.md  DISTRIBUTION_GUIDE.md  README.md  TECHNICAL_DOCS.md  branding-config.js  build-all.sh  index.html  package-lock.json  package.json  stage.html  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  release.yml
docs/: FAQ.md  INSTALLATION_GUIDE.md  README.md  TECHNICAL_DOCS.md  USER_MANUAL.md  VIDEO_INTEGRATION.md
src/: index.css  main.jsx  stage.jsx  timer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
website/: index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.css  App.jsx  index.css
website/src/components/: Documentation.jsx  Download.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Pricing.jsx  Testimonials.jsx  VideoDemo.jsx
website/src/contexts/: LanguageContext.jsx
website/src/hooks/: useTranslation.js
website/src/utils/: translations.js  translations.jsx
